--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Are you free tomorrow?</h1>
+                <h1 class = "header_text">Are you free tomorrow amore?</h1>
                 <h1 class = "header_text">Do you wanna be my valentine?</h1>
             </div>
             <div class="gif_container">
